force-app/main/default/objects/Assessment_Template_Junction__c/Assessment_Template_Junction__c.object-meta.xml
<CustomObject>
    <label>Assessment Template Junction</label>
    <nameField>
        <displayFormat>ATM-{0000}</displayFormat>
        <label>Assessement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Template Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>