force-app/main/default/objects/Assessment_Template_Junction__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipName>Assesement_Template_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>