force-app/main/default/objects/Assessment_Template_Junction__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Assesement_Template_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>