force-app/main/default/objects/Assessment_Template_Junction__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Assesement_Template_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>