force-app/main/default/objects/Assessment_Template_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Template__c</columns>
    <columns>Section__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>